# Testing_Agent_Avatar

./: .gitignore  README.md
Frontend/: package-lock.json  package.json
Frontend/src/: App.jsx  Avatar.jsx
livekit-voice-agent/: agent.py  graph.py  interview_answers.txt  pyproject.toml
livekit-voice-agent/chroma_store/: chroma.sqlite3
